--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-<div>
-  <div class="main-div">
+<div class="div-body">
+  <!-- <div class="main-div">
     <div>
       <img class="img-profile"
-        src="./assests/4469093-screen_shot_2015-03-25_at_5.13.24_pm_copy.webp"
-        alt="Cachorrinho"
+        src="./assets/img/4469093-screen_shot_2015-03-25_at_5.13.24_pm_copy.webp"
+        alt="Ryck"
       />
     </div>
     <div class="div-info">
@@ -24,10 +24,10 @@
       </p>
       <span>Para mais informacoes:</span>
       <a href="https://www.instagram.com/rickandmorty/" target="_blank">
-        <img src="./assests/instagram.png" alt="" class="img-insta">
+        <img src="./assets/img/instagram.png" alt="" class="img-insta">
       </a>
     </div>
-  </div>
+  </div> -->
 </div>
   </body>
   <script src="./script.js"></script>
