--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
        Um cientista maluco apaixonado por ciencia e tecnologia, considerado por muitos o homem mais inteligente do mundo.
       </p>
       <span>Para mais informacoes:</span>
+     <div>
       <a href="https://www.instagram.com/rickandmorty/" target="_blank">
         <img src="./assets/img/instagram.png" alt="" class="img-insta">
       </a>
+      <a href="https://twitter.com/RickandMorty" target="">
+        
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/twitter/twitter-original.svg" class="img-twitter"/>
+          
+      </a>
+     </div>
     </div>
   </div> -->
 </div>
